--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -32,7 +32,7 @@
         android:layout_gravity="bottom"
         app:bnbMode="mode_default"
         app:bnbInactiveColor="@color/itemIconInactiveColor"
-        app:bnbBackgroundColor="#000"
+        app:bnbBackgroundColor="@color/navigationBarBackground"
         />
 
 </LinearLayout>
